name:                cloud-haskell-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cloud-haskell-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       binary >= 0.8.3.0,
                       containers >= 0.5.7.1,
                       distributed-process-async >= 0.2.4
  default-language:    Haskell2010

executable cloud-haskell-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , binary >= 0.8.3.0
                     , cloud-haskell-test
                     , containers >= 0.5.7.1
                     , distributed-process
                     , distributed-process-async >= 0.2.4
                     , distributed-process-client-server
                     , distributed-process-extras
                     , network-transport-tcp
  default-language:    Haskell2010

test-suite cloud-haskell-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , binary >= 0.8.3.0
                     , cloud-haskell-test
                     , containers >= 0.5.7.1
                     , distributed-process-async >= 0.2.4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/cloud-haskell-test
